# brocker_esp32s3

./: .gitignore  LICENSE  OPTIMIZATION_NOTES.md  README.md  sdkconfig  sdkconfig.old
.github/workflows/: ci.yml
components/audio_player/: audio_player.c
components/automation_engine/: automation_engine.c
components/broker_config/: CMakeLists.txt  Kconfig.projbuild  dummy.c
components/config_store/: CMakeLists.txt  config_store.c
components/device_manager/: CMakeLists.txt  device_manager.c  device_manager_export.c  device_manager_internal.h  device_manager_parse.c  device_manager_validate.c  template_applier.c  template_factory.c  template_registry.c  template_runtime.c
components/device_manager/include/: device_manager.h  dm_limits.h  dm_profiles.h  dm_runtime_flag.h  dm_runtime_mqtt.h  dm_runtime_signal.h  dm_runtime_uid.h  dm_storage.h  dm_template_applier.h  dm_template_factory.h  dm_template_registry.h  dm_template_runtime.h  dm_templates.h
components/device_manager/profiles/: dm_profiles.c
components/device_manager/runtime/: dm_runtime_flag.c  dm_runtime_mqtt.c  dm_runtime_signal.c  dm_runtime_uid.c
components/device_manager/storage/: dm_storage.c
components/device_manager/templates/: dm_templates.c
components/device_manager/test/: CMakeLists.txt
components/error_monitor/: error_monitor.c
components/event_bus/: event_bus.c
components/mqtt_core/: mqtt_core.c
components/status_led/: status_led.c
components/web_ui/: CMakeLists.txt  (+5 more)
docs/: SCENARIO_SETUP.md  SCENARIO_SETUP_RUS.md  TEMPLATE_GUIDE.md  TEMPLATE_GUIDE_RUS.md
main/: main.c
(+22 files in other folders)
